--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>Monsiska</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="src\app\page.js"></script>
+    <div>
+
+        <script src="src\app\page.js"></script>
+    </div>
     
 </body>
 </html>
